--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-TWILIO_ACCOUNT_SID=AC556bcfe95abaaa72608795db6faebb8c
-TWILIO_AUTH_TOKEN=cb0708c59efefefeb34ef477e883c697
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=+18313460660
